--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Algorithms</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico?">
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico?">
     <link rel="stylesheet" href="styles.css">
     <script type="module" src="script.js" defer></script>
 </head>
@@ -14,27 +14,31 @@
         <div class="flexColumn generateContainer">
             <button id="emptyButton">Empty Maze</button>
             <button id="generateButton">Autogenerate</button>
-            <input type="number" id="generateInput">
+            <label id="gridSizeInputLabel" for="generateInput">Grid Size:
+                <input id="generateInput" type="number" >
+            </label>
         </div>
-        <button id="breadthButton">Breadth</button>
-        <button id="depthButton">Depth</button>
-        <button id="aStarButton">A*</button>
+        <div class="flexColumn">
+            <button id="breadthButton">Breadth</button>
+            <button id="depthButton">Depth</button>
+            <button id="aStarButton">A* (WIP)</button>
+        </div>
     </div>
     <canvas width="700" height="700"></canvas>
     <div class="flexColumn radioContainer">
-        <label for="wall">
+        <label class="editLabel" for="wall">
             <input type="radio" name="tileSelector" id="wall" value="0" checked>
             Wall
         </label>
-        <label for="empty">
+        <label class="editLabel" for="empty">
             <input type="radio" name="tileSelector" id="empty" value="1">
             Path
         </label>
-        <label for="start">
+        <label class="editLabel" for="start">
             <input type="radio" name="tileSelector" id="start" value="2">
             Start
         </label>
-        <label for="end">
+        <label class="editLabel" for="end">
             <input type="radio" name="tileSelector" id="end" value="3">
             End
         </label>
