--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="left">
         <div class="flexRow">
-            <button id="searchTabButton" class="tabButton tabClicked">Search</button>
+            <button id="searchTabButton" class="tabButton clicked">Search</button>
             <button id="editTabButton" class="tabButton">Edit</button>
             <button id="newMazeTabButton" class="tabButton">New Maze</button>
         </div>
@@ -20,8 +20,9 @@
             <div id="newMazeContainer" class="flexColumn tab">
                 <button id="emptyButton">Empty Maze</button>
                 <button id="generateButton">Autogenerate</button>
-                <!-- <label id="gridSizeInputLabel" for="gridSizeInput">Grid Size:</label> -->
-                <input id="gridSizeInput" type="number">
+                <label id="gridSizeInputLabel" for="gridSizeInput">Grid Size:
+                    <input id="gridSizeInput" type="number">
+                </label>
             </div>
             <div id="searchContainer" class="flexColumn tab">
                 <button id="breadthButton">Breadth</button>
