add basic mobile support

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="left">
-        <div class="flexRow">
+        <div id="modeSelector">
             <button id="searchTabButton" class="tabButton clicked">Search</button>
             <button id="editTabButton" class="tabButton">Edit</button>
             <button id="newMazeTabButton" class="tabButton">New Maze</button>
