Add delay option for maze generation and solving
Fixes #3

Add user-configurable delay for maze generation and solving algorithms.

* Add a new input field and label for delay value in `index.html`.
* Remove the constant `DELAY` and add a function to get the delay value from the input field in `scripts/script.js`.
* Update the search and generation function calls to use the delay value from the input field in `scripts/script.js`.
* Add styles for the new delay input field and label in `styles/styles.css`.

---

For more details, open the [Copilot Workspace session](https://copilot-workspace.githubnext.com/blahnikkai/advanced-maze-solver/issues/3?shareId=XXXX-XXXX-XXXX-XXXX).

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                 <button id="breadthButton">Breadth</button>
                 <button id="depthButton">Depth</button>
                 <button id="aStarButton">A*</button>
+                <label for="delay_input">Delay (ms):
+                    <input id="delay_input" type="number" value="50">
+                </label>
             </div>
             <div id="edit_tab" class="tab_content">
                 <label class="editLabel" for="wall">
